--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,5 +1,9 @@
 @import "tailwindcss";
 
+@theme {
+  --font-unbounded: var(--font-unbounded);
+  --font-nunito: var(--font-nunito-sans);
+}
 body {
   background: var(--color-background);
   color: var(--color-foreground);
